--- a/api/rest/package.json
+++ b/api/rest/package.json
@@ -28,12 +28,14 @@
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/swagger": "^6.0.5",
     "@paypal/checkout-server-sdk": "^1.0.3",
+    "@prisma/client": "^5.6.0",
     "axios": "^1.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "fuse.js": "^6.6.2",
     "nestjs-stripe": "^1.0.0",
     "paypal-rest-sdk": "^1.8.1",
+    "prisma": "^5.6.0",
     "qs": "^6.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
