--- a/shop/public/manifest.json
+++ b/shop/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "PickBazar E-Commerce",
-  "short_name": "PickBazar",
+  "name": "Organic Food E-Commerce",
+  "short_name": "organicFoodApp",
   "theme_color": "#ffffff",
   "background_color": "#004740",
   "display": "fullscreen",
