--- a/shop/tsconfig.json
+++ b/shop/tsconfig.json
@@ -18,7 +18,8 @@
     "paths": {
       "@/*": ["src/*"],
       "@/framework/*": ["src/framework/rest/*"],
-      "@/framework/static/*": ["src/framework/static/*"]
+      "@/framework/static/*": ["src/framework/static/*"],
+      "react": [ "./node_modules/@types/react" ]
     },
     "incremental": true
   },
